--- a/index.html
+++ b/index.html
@@ -4,12 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="app.js" defer></script>
+    <script src="dist/app.js" defer></script>
+    <link rel="stylesheet" href="/style/style.css">
 
     <title>Drag & Drop</title>
+
 </head>
 <body>
-    <h3> Practicing Typescript </h3>
+    <h3> Practicing Typescript</h3>
+    <p>
+        This application was originally created by Cecilia and presented by Instructor Maximillian Schwarzmuller. 
+        This project is simply me practicing TypeScript by coding along with my instructor, Maximillian Schwarzmuller.
+    </p>
+
+    <template id="project-input">
+        <form>
+            <div class="form-control">
+                <label for="title">Title</label>
+                <input type="text" id="title"/>
+
+            </div>
+        </form>
+    </template>
+
+    <template id="single-project">
+        <li></li>
+    </template>
+
+    <template id="project-list">
+        <section class="projects">
+            <header>
+                <h2></h2>
+            </header>
+            <ul></ul>
+        </section>
+    </template>
+
+    <div id="app"></div>
     
 </body>
 </html>
