--- a/index.html
+++ b/index.html
@@ -22,8 +22,16 @@
             <div class="form-control">
                 <label for="title">Title</label>
                 <input type="text" id="title"/>
-
             </div>
+            <div class="form-control">
+                <label for="description">Description</label>
+                <textarea id="description" rows="3"></textarea>
+            </div>
+            <div class="form-control">
+                <label for="people">People</label>
+                <input type="number" id="people" step="1" min="0" max="10"/>
+            </div>
+            <button type="submit">ADD PROJECT</button>
         </form>
     </template>
 
