DOM Element Selection & OOP Rendering

--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="dist/app.js" defer></script>
+    <script src="app.js" defer></script>
     <link rel="stylesheet" href="/style/style.css">
 
     <title>Drag & Drop</title>
 
 </head>
 <body>
-    <h3> Practicing Typescript</h3>
-    <p>
-        This application was originally created by Cecilia and presented by Instructor Maximillian Schwarzmuller. 
-        This project is simply me practicing TypeScript by coding along with my instructor, Maximillian Schwarzmuller.
+    <h3 id="description-text">Nothing fancy, just practice.</h3>
+    <p id="description-paragraph">
+        This project is simply me practicing TypeScript by coding along with my instructor, Maximillian Schwarzmuller. The project does not belong to me.
     </p>
 
     <template id="project-input">
