--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </template>
 
     <template id="single-project">
-        <li>
+        <li draggable="true">
             <h2></h2>
             <h3></h3>
             <p></p>
@@ -43,7 +43,7 @@
     </template>
 
     <template id="project-list">
-        <section class="projects">
+        <section class="projects" id="active-projects">
             <header>
                 <h2></h2>
             </header>
